tests/cases/function/expand_fail/02_rename_three_names.rs
#![no_main]

use split_async::split;

#[split(a, b, c)]
async fn func() {}
